hphp/hack/test/typecheck/nameof/parens.php.exp
ERROR: File "parens.php", line 4, characters 10-14:
`nameof` can only be used with a class (Parsing[1002])
