hphp/hack/test/typecheck/nameof/parens.php
<?hh

function f(): void {
  nameof (Foo);
}
